# Benin_hackathon_ai_subtitle_generation

./: .env  .gitignore  Readme.md  geminisubtitlepipiline1final.ipynb  main.py  pyproject.toml  stabiltyai.ipynb  stable_diff.ipynb
backend/: main.py  test.py  utils.py
frontend/: pnpm-lock.yaml
frontend/public/: eng.vtt  subtitle.vtt
frontend/src/app/: page.tsx
frontend/src/components/: header.tsx
frontend/src/components/ui/: title.tsx  videoScreen.tsx
frontend/src/utils/: time.ts  toaster.ts
