[tool.poetry]
name = "benin-lablab-ai"
version = "0.1.0"
description = ""
authors = ["JalilUmar <jalil786.umer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
streamlit-webrtc = "^0.47.6"
moviepy = "^1.0.3"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
google-generativeai = "^0.5.3"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
langchain-community = "^0.0.38"
langgraph = "^0.0.49"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
